# voice-to-voice

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.gpu  LICENSE  Makefile  README.md  docker-compose.yml  example.py  main.py  pyproject.toml  requirements.txt  setup.py  setup.sh
docs/: API.md  DEVELOPMENT.md
src/voice_pipeline/: __init__.py  cli.py  config.py  dataset.py  downloader.py  extractor.py  pipeline.py  synthesizer.py  trainer.py  utils.py
tests/: __init__.py  conftest.py  test_config.py  test_utils.py
